This fixes #254 overflow enabled bu default

--- a/client/main.css
+++ b/client/main.css
@@ -410,3 +410,7 @@ input {
     -webkit-box-shadow: white 0 0 20px 20px;
     box-shadow: white 0 0 20px 20px;
 }
+
+.materialize-textarea {
+    overflow: auto !important;
+}
